welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:1: error: object java.lang.String is not a value
  ecritMessage(String(i))
               ^